# streamlate

./: .dockerignore  .gitignore  AGENTS.md  CHOICES.md  Cargo.toml  README.md  ROADMAP.md  base_spec.md  docker-compose.yml
.github/workflows/: ci.yml  e2e.yml
clients/listener/: index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.app.json  tsconfig.json  vite.config.ts
clients/listener/src/: App.tsx  index.css  main.tsx
clients/listener/src/components/: PinPrompt.tsx  QRShare.tsx  ThemeToggle.tsx
clients/listener/src/lib/: api.ts
clients/listener/src/pages/: ListenPage.tsx  SessionPicker.tsx
clients/shared/: package-lock.json  package.json  tsconfig.json
clients/shared/src/: index.ts
clients/shared/src/api/: client.ts
clients/shared/src/components/: ConnectionStatus.tsx  VUMeter.tsx  VolumeSlider.tsx
clients/shared/src/hooks/: useAudioAnalyser.ts  useAudioLevel.ts  useListenerWebRTC.ts  useTheme.ts  useWebRTC.ts
clients/translation/: index.html  package-lock.json  package.json  vite.config.ts
clients/translation/src/: App.tsx  index.css
clients/translation/src/api/: client.ts  index.ts  types.ts
clients/translation/src/components/: AdminGuard.tsx  AdminLayout.tsx  AuthGuard.tsx  ChannelHealth.tsx  ConnectionStatus.tsx  Layout.tsx  Skeleton.tsx  ToastContainer.tsx  VUMeter.tsx  VolumeSlider.tsx
clients/translation/src/pages/: DashboardPage.tsx  LoginPage.tsx  PlaybackPage.tsx  RecordingsPage.tsx  SessionPage.tsx
clients/translation/src/pages/admin/: AdminAbcs.tsx  AdminDashboard.tsx  AdminRecordings.tsx  AdminSessions.tsx  AdminSettings.tsx  AdminUsers.tsx
clients/translation/src/stores/: authStore.ts  dashboardStore.ts  recordingsStore.ts  sessionStore.ts  themeStore.ts  toastStore.ts
crates/abc/: Cargo.toml
crates/abc/src/: alsa_audio.rs  audio.rs  config.rs  headless.rs  main.rs  signaling.rs  state_machine.rs  verification.rs  webrtc_peer.rs
crates/common/: Cargo.toml
crates/common/src/: api.rs  error.rs  lib.rs  models.rs  signaling.rs  types.rs
crates/server/: Cargo.toml
crates/server/migrations/: 001_initial.sql
crates/server/src/: auth.rs  config.rs  error.rs  main.rs  metrics.rs  middleware.rs  rate_limit.rs  security.rs  session_manager.rs  sfu_loop.rs  signaling.rs  webrtc_peer.rs
crates/server/src/db/: bootstrap.rs  mod.rs
crates/server/src/recording/: metadata.rs  mod.rs  ogg_writer.rs  recovery.rs  session_recorder.rs
crates/server/src/routes/: abc_routes.rs  auth_routes.rs  health_routes.rs  mod.rs  recording_routes.rs  session_routes.rs  system_routes.rs  user_routes.rs  ws_routes.rs
deploy/: Caddyfile  streamlate-server.service  streamlate-server.toml
docker/: Dockerfile.abc  README.md
docs/: README.md  abc-provisioning.md  abc.md  admin-guide.md  api.md  auth.md  backup-recovery.md  data-model.md  deployment.md  e2e-testing.md  listener-client.md  recording.md  server.md  translation-client.md  user-guide.md  webrtc.md
e2e/: docker-compose.yml  package-lock.json  package.json  playwright.config.ts  tsconfig.json
e2e/docker/: Dockerfile.abc  Dockerfile.abc-sim  Dockerfile.listener-client  Dockerfile.server  Dockerfile.translation-client  nginx-spa-e2e.conf  nginx-spa-macvlan.conf  nginx-spa.conf
e2e/fixtures/: api.ts  audio.ts  webrtc.ts  ws-helpers.ts
e2e/tests/phase-0/: smoke.spec.ts
e2e/tests/phase-1/: abc-lifecycle.spec.ts  abcs.spec.ts  auth.spec.ts  bootstrap.spec.ts  sessions.spec.ts  users.spec.ts  z-ratelimit.spec.ts
e2e/tests/phase-2/: audio-flow.spec.ts  mute-passthrough.spec.ts  reconnection.spec.ts  signaling.spec.ts
e2e/tests/phase-3/: audio-controls.spec.ts  dashboard.spec.ts  login-flow.spec.ts  session-workflow.spec.ts
e2e/tests/phase-4/: direct-link.spec.ts  listening.spec.ts  pin.spec.ts  session-end.spec.ts  session-picker.spec.ts
e2e/tests/phase-8/: full-workflow.spec.ts  monitoring.spec.ts  security.spec.ts
plan/: phase-0-scaffold.md  phase-1-server-core.md  phase-2-webrtc.md  phase-3-translation-client.md  phase-4-listener-client.md  phase-5-abc.md  phase-6-recording.md  phase-7-admin-polish.md  phase-8-hardening.md
scripts/: codegen.sh  deploy-server.sh  play-source.sh  record-output.sh  setup-loopback.sh
server/: package-lock.json  package.json
server/src/: index.js
