[package]
name = "streamlate-abc"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "streamlate-abc"
path = "src/main.rs"

[features]
headless = []

[dependencies]
streamlate-common = { path = "../common" }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
anyhow = { workspace = true }
uuid = { workspace = true }
webrtc = "0.12"
futures-util = "0.3"
tokio-tungstenite = { version = "0.26", features = ["native-tls"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "native-tls"] }
axum = { version = "0.8", features = ["macros"] }
audiopus = "0.3.0-rc.0"
rand = "0.8"
bytes = "1"
