[package]
name = "streamlate-abc"
version.workspace = true
edition.workspace = true

[[bin]]
name = "streamlate-abc"
path = "src/main.rs"

[features]
default = []
headless = []

[dependencies]
streamlate-common = { path = "../common" }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
uuid = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
chrono = { workspace = true }
toml = "0.8"
reqwest = { version = "0.12", features = ["json"] }
tokio-tungstenite = { version = "0.26", features = ["native-tls"] }
futures-util = "0.3"
webrtc = "0.12"
axum = { version = "0.8", features = [] }
url = "2"
opus = "0.3"
bytes = "1"
tokio-util = "0.7"
cpal = "0.15"
