[package]
name = "streamlate-server"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "streamlate-server"
path = "src/main.rs"

[dependencies]
streamlate-common = { path = "../common", features = ["openapi"] }

# Async runtime
tokio = { workspace = true }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }

# IDs and time
uuid = { workspace = true }
chrono = { workspace = true }

# Logging
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

# Error handling
thiserror = { workspace = true }
anyhow = { workspace = true }

# HTTP framework
axum = { version = "0.8", features = ["macros", "ws"] }
axum-extra = { version = "0.10", features = ["cookie", "typed-header"] }
tower = { version = "0.5", features = ["util"] }
tower-http = { version = "0.6", features = ["cors", "trace", "set-header", "request-id", "propagate-header"] }
http = "1"

# Database
rusqlite = { version = "0.32", features = ["bundled"] }
r2d2 = "0.8"
r2d2_sqlite = "0.25"

# Auth
argon2 = "0.5"
jsonwebtoken = "9"
rand = "0.8"
base64 = "0.22"
sha2 = "0.10"
hex = "0.4"

# Config
config = { version = "0.14", features = ["toml"] }
clap = { version = "4", features = ["derive"] }

# OpenAPI
utoipa = { version = "5", features = ["axum_extras", "chrono", "uuid"] }

# Rate limiting
dashmap = "6"

# Time
time = "0.3"

# WebSocket
futures-util = "0.3"

# WebRTC (str0m-based SFU)
str0m = "0.18"

# Recording
tokio-stream = "0.1"
tokio-util = { version = "0.7", features = ["io"] }
